imclient/marslib/include/WFClient.h



//general function callback
typedef void (WFCAPI *fun_general_void_success_callback)(void *pObject, int objectDataType);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);


extern "C" PROTOWRAPPER_API const char* WFCAPI getClientId(size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getProtoRevision(size_t *retlen);


extern "C" PROTOWRAPPER_API int64_t WFCAPI connect2Server(const char *cuserId, size_t userId_len, const char *ctoken, size_t token_len);


extern "C" PROTOWRAPPER_API void WFCAPI setProxyInfo(const char *chost, size_t host_len, const char *cip, size_t ip_len, int port, const char *cname, size_t name_len, const char *cpassword, size_t password_len);


extern "C" PROTOWRAPPER_API int WFCAPI WFCAPI getConnectionStatus();


extern "C" PROTOWRAPPER_API bool WFCAPI isLogin();


extern "C" PROTOWRAPPER_API void WFCAPI disconnect(int flag);


extern "C" PROTOWRAPPER_API bool WFCAPI beginTransaction();

extern "C" PROTOWRAPPER_API bool WFCAPI commitTransaction();

extern "C" PROTOWRAPPER_API bool WFCAPI rollbackTransaction();


extern "C" PROTOWRAPPER_API void WFCAPI setBackupAddressStrategy(int strategy);

extern "C" PROTOWRAPPER_API void WFCAPI setBackupAddress(const char *caddress, size_t address_len, int port);

extern "C" PROTOWRAPPER_API int WFCAPI getConnectedNetworkType();

extern "C" PROTOWRAPPER_API void WFCAPI setUserAgent(const char *cagent, size_t agent_len);

extern "C" PROTOWRAPPER_API void WFCAPI addHttpHeader(const char *cheader, size_t header_len, const char *cvalue, size_t value_len);


extern "C" PROTOWRAPPER_API void WFCAPI onAppResume();

extern "C" PROTOWRAPPER_API void WFCAPI onAppSuspend();


extern "C" PROTOWRAPPER_API int64_t WFCAPI getServerDeltaTime();


extern "C" PROTOWRAPPER_API const char* WFCAPI getCurrentUserId(size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getLogFilesPath(size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getConversationInfos(const int atypes[], int types_len, const int als[], int ls_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI registerMessageFlag(int type, int flag);


extern "C" PROTOWRAPPER_API const char* WFCAPI getConversationInfo(int conversationType, const char *ctarget, size_t target_len, int line, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI searchConversation(const int atypes[], int types_len, const int als[], int ls_len, const char *ckeyword, size_t keyword_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI searchConversationEx(const int atypes[], int types_len, const int als[], int ls_len, const char *ckeyword, size_t keyword_len, int64_t start_time, int64_t end_time, bool desc, int limit, int offset, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI searchConversationEx2(const int atypes[], int types_len, const int als[], int ls_len, const int acnttypes[], int cnttypes_len, const char *ckeyword, size_t keyword_len, int64_t start_time, int64_t end_time, bool desc, int limit, int offset, bool onlyMentionedMsg, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI removeConversation(int conversationType, const char *ctarget, size_t target_len, int line, bool clearMsg);


extern "C" PROTOWRAPPER_API void WFCAPI setConversationTop(int conversationType, const char *ctarget, size_t target_len, int line, int isTop, fun_general_void_success_callback succCallback, fun_general_error_callback errCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI setConversationSlient(int conversationType, const char *ctarget, size_t target_len, int line, bool isSlient, fun_general_void_success_callback succCallback, fun_general_error_callback errCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isConversationSlient(int conversationType, const char *ctarget, size_t target_len, int line);


extern "C" PROTOWRAPPER_API void WFCAPI setConversationDraft(int conversationType, const char *ctarget, size_t target_len, int line, const char *cdraft, size_t draft_len);


extern "C" PROTOWRAPPER_API void WFCAPI setConversationTimestamp(int conversationType, const char *ctarget, size_t target_len, int line, int64_t timestamp);


extern "C" PROTOWRAPPER_API const char* WFCAPI getUnreadCount(const int atypes[], int types_len, const int als[], int ls_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getConversationUnreadCount(int conversationType, const char *ctarget, size_t target_len, int line, size_t *retlen);


extern "C" PROTOWRAPPER_API bool WFCAPI clearUnreadStatus(int conversationType, const char *ctarget, size_t target_len, int line);


extern "C" PROTOWRAPPER_API bool WFCAPI clearUnreadStatusEx(const int atypes[], int types_len, const int alines[], int lines_len);


extern "C" PROTOWRAPPER_API bool WFCAPI clearAllUnreadStatus();


extern "C" PROTOWRAPPER_API bool WFCAPI clearMessageUnreadStatus(int messageId);


extern "C" PROTOWRAPPER_API bool WFCAPI clearMessageUnreadStatusBefore(int conversationType, const char *ctarget, size_t target_len, int line, int messageId);


extern "C" PROTOWRAPPER_API int64_t WFCAPI setLastReceivedMessageUnRead(int conversationType, const char *ctarget, size_t target_len, int line, int64_t messageUid, int64_t timestamp);


extern "C" PROTOWRAPPER_API long WFCAPI getConversationFirstUnreadMessageId(int conversationType, const char *ctarget, size_t target_len, int line);


extern "C" PROTOWRAPPER_API void WFCAPI clearRemoteConversationMessage(int conversationType, const char *ctarget, size_t target_len, int line, fun_general_void_success_callback succCallback, fun_general_error_callback errCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI setMediaMessagePlayed(long messageId);


extern "C" PROTOWRAPPER_API bool WFCAPI setMessageLocalExtra(long messageId, const char *clocalExtra, size_t localExtra_len);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMessages(int conversationType, const char *ctarget, size_t target_len, int line, const int acontTypes[], int contTypes_len, int64_t fromIndex, bool direction, int count, const char *cwithUser, size_t withUser_len, size_t *retlen);