imclient/lib/src/ffi/wfclient_bindings.dart


  late final Pointer<Char> Function(Pointer<Size>) getClientId =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getClientId');

  late final Pointer<Char> Function(Pointer<Size>) getProtoRevision =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getProtoRevision');

  late final int Function(Pointer<Char>, int, Pointer<Char>, int) connect2Server =
      _lib.lookupFunction<Int64 Function(Pointer<Char>, Size, Pointer<Char>, Size), int Function(Pointer<Char>, int, Pointer<Char>, int)>('connect2Server');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Char>, int) setProxyInfo =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<Char>, Size), void Function(Pointer<Char>, int, Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Char>, int)>('setProxyInfo');

  late final int Function() getConnectionStatus =
      _lib.lookupFunction<Int32 Function(), int Function()>('getConnectionStatus');

  late final bool Function() isLogin =
      _lib.lookupFunction<Bool Function(), bool Function()>('isLogin');

  late final void Function(int) disconnect =
      _lib.lookupFunction<Void Function(Int32), void Function(int)>('disconnect');

  late final bool Function() beginTransaction =
      _lib.lookupFunction<Bool Function(), bool Function()>('beginTransaction');

  late final bool Function() commitTransaction =
      _lib.lookupFunction<Bool Function(), bool Function()>('commitTransaction');

  late final bool Function() rollbackTransaction =
      _lib.lookupFunction<Bool Function(), bool Function()>('rollbackTransaction');

  late final void Function(int) setBackupAddressStrategy =
      _lib.lookupFunction<Void Function(Int32), void Function(int)>('setBackupAddressStrategy');

  late final void Function(Pointer<Char>, int, int) setBackupAddress =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32), void Function(Pointer<Char>, int, int)>('setBackupAddress');

  late final int Function() getConnectedNetworkType =
      _lib.lookupFunction<Int32 Function(), int Function()>('getConnectedNetworkType');

  late final void Function(Pointer<Char>, int) setUserAgent =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size), void Function(Pointer<Char>, int)>('setUserAgent');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int) addHttpHeader =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size), void Function(Pointer<Char>, int, Pointer<Char>, int)>('addHttpHeader');

  late final void Function() onAppResume =
      _lib.lookupFunction<Void Function(), void Function()>('onAppResume');

  late final void Function() onAppSuspend =
      _lib.lookupFunction<Void Function(), void Function()>('onAppSuspend');

  late final int Function() getServerDeltaTime =
      _lib.lookupFunction<Int64 Function(), int Function()>('getServerDeltaTime');

  late final Pointer<Char> Function(Pointer<Size>) getCurrentUserId =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getCurrentUserId');

  late final Pointer<Char> Function(Pointer<Size>) getLogFilesPath =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getLogFilesPath');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Size>) getConversationInfos =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Size>)>('getConversationInfos');

  late final void Function(int, int) registerMessageFlag =
      _lib.lookupFunction<Void Function(Int32, Int32), void Function(int, int)>('registerMessageFlag');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Size>) getConversationInfo =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Size>)>('getConversationInfo');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<Size>) searchConversation =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Char>, int, Pointer<Size>)>('searchConversation');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Char>, int, int, int, bool, int, int, Pointer<Size>) searchConversationEx =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Char>, Size, Int64, Int64, Bool, Int32, Int32, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Char>, int, int, int, bool, int, int, Pointer<Size>)>('searchConversationEx');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Char>, int, int, int, bool, int, int, bool, Pointer<Size>) searchConversationEx2 =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Char>, Size, Int64, Int64, Bool, Int32, Int32, Bool, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Char>, int, int, int, bool, int, int, bool, Pointer<Size>)>('searchConversationEx2');

  late final void Function(int, Pointer<Char>, int, int, bool) removeConversation =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Bool), void Function(int, Pointer<Char>, int, int, bool)>('removeConversation');

  late final void Function(int, Pointer<Char>, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setConversationTop =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setConversationTop');

  late final void Function(int, Pointer<Char>, int, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) setConversationSlient =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('setConversationSlient');

  late final bool Function(int, Pointer<Char>, int, int) isConversationSlient =
      _lib.lookupFunction<Bool Function(Int32, Pointer<Char>, Size, Int32), bool Function(int, Pointer<Char>, int, int)>('isConversationSlient');

  late final void Function(int, Pointer<Char>, int, int, Pointer<Char>, int) setConversationDraft =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<Char>, Size), void Function(int, Pointer<Char>, int, int, Pointer<Char>, int)>('setConversationDraft');

  late final void Function(int, Pointer<Char>, int, int, int) setConversationTimestamp =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Int64), void Function(int, Pointer<Char>, int, int, int)>('setConversationTimestamp');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Size>) getUnreadCount =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Size>)>('getUnreadCount');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Size>) getConversationUnreadCount =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Size>)>('getConversationUnreadCount');

  late final bool Function(int, Pointer<Char>, int, int) clearUnreadStatus =
      _lib.lookupFunction<Bool Function(Int32, Pointer<Char>, Size, Int32), bool Function(int, Pointer<Char>, int, int)>('clearUnreadStatus');

  late final bool Function(Pointer<Int32>, int, Pointer<Int32>, int) clearUnreadStatusEx =
      _lib.lookupFunction<Bool Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32), bool Function(Pointer<Int32>, int, Pointer<Int32>, int)>('clearUnreadStatusEx');

  late final bool Function() clearAllUnreadStatus =
      _lib.lookupFunction<Bool Function(), bool Function()>('clearAllUnreadStatus');

  late final bool Function(int) clearMessageUnreadStatus =
      _lib.lookupFunction<Bool Function(Int32), bool Function(int)>('clearMessageUnreadStatus');

  late final bool Function(int, Pointer<Char>, int, int, int) clearMessageUnreadStatusBefore =
      _lib.lookupFunction<Bool Function(Int32, Pointer<Char>, Size, Int32, Int32), bool Function(int, Pointer<Char>, int, int, int)>('clearMessageUnreadStatusBefore');

  late final int Function(int, Pointer<Char>, int, int, int, int) setLastReceivedMessageUnRead =
      _lib.lookupFunction<Int64 Function(Int32, Pointer<Char>, Size, Int32, Int64, Int64), int Function(int, Pointer<Char>, int, int, int, int)>('setLastReceivedMessageUnRead');

  late final int Function(int, Pointer<Char>, int, int) getConversationFirstUnreadMessageId =
      _lib.lookupFunction<Long Function(Int32, Pointer<Char>, Size, Int32), int Function(int, Pointer<Char>, int, int)>('getConversationFirstUnreadMessageId');

  late final void Function(int, Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) clearRemoteConversationMessage =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('clearRemoteConversationMessage');

  late final void Function(int) setMediaMessagePlayed =
      _lib.lookupFunction<Void Function(Long), void Function(int)>('setMediaMessagePlayed');

  late final bool Function(int, Pointer<Char>, int) setMessageLocalExtra =
      _lib.lookupFunction<Bool Function(Long, Pointer<Char>, Size), bool Function(int, Pointer<Char>, int)>('setMessageLocalExtra');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<Size>) getMessages =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<Size>)>('getMessages');
